Fix: more whitespace needed

--- a/docs/_src/docs.scss
+++ b/docs/_src/docs.scss
@@ -13,7 +13,6 @@
 footer .contact-address {
     order: 99;
     flex-basis: 100%;
-    padding-top: 0px !important;
 }
 
 footer .contact-regdetails {
